force-app/main/default/objects/Company_Login_Counts__c/Company_Login_Counts__c.object-meta.xml
<CustomObject>
    <label>Company Login Counts</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Login Counts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>