force-app/main/default/objects/Company_Login_Counts__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <label>Company Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>