force-app/main/default/objects/Company_Login_Counts__c/fields/Login_Month__c.field-meta.xml
<CustomField>
    <fullName>Login_Month__c</fullName>
    <label>Login Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>