force-app/main/default/objects/Company_Login_Counts__c/fields/LoginCount__c.field-meta.xml
<CustomField>
    <fullName>LoginCount__c</fullName>
    <label>Login Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>