force-app/main/default/objects/Company_Login_Counts__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>User Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>